# VEN0m-Ransomware

./: Cargo.toml  IMFForceDelete.sys  README.md  build.rs
src/: antidote.rs  core.rs  driver.rs  encrypt.rs  main.rs  persist.rs  ransom_note.rs  service.rs  task.rs  uac.rs  vnm.rs  wallpaper.rs
